# MKT4U

./: .env.example  .gitignore  BACKEND_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  jest.config.js  jest.setup.env.js  jest.setup.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: ci-cd.yml
__tests__/: api.test.ts  test-utils.tsx
__tests__/api/: auth-signup.test.ts
__tests__/components/: attraction-form.test.tsx  mode-toggle.test.tsx
__tests__/lib/: database.test.ts  utils.test.ts  validation.test.ts  validations.test.ts
__tests__/utils/: performance.ts  test-helpers.ts
api/campaigns/: route.ts
api/content/: route.ts
api/law-of-attraction/: route.ts
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/app/: layout.tsx  page.tsx
app/blog/: page.tsx
app/campaigns/: loading.tsx  page.tsx
app/careers/: page.tsx
app/contact/: page.tsx
app/content-collection/: loading.tsx  page.tsx
app/documentation/: page.tsx
app/law-of-attraction/: actions.ts  attraction-form.tsx  loading.tsx  page.tsx
app/login/: page.tsx
app/privacy-policy/: page.tsx
app/schedule/: page.tsx  (+1 more)
blockchain/: Cargo.toml
blockchain/src/: analytics.rs  campaigns.rs  errors.rs  lib.rs  main.rs  rewards.rs
components/: app-navbar.tsx
database/: seed.ts
docs/: api-reference.md
lib/: auth.ts  email.ts  errors.ts  file-upload.ts  monitoring.ts  notifications.ts  production.ts  rate-limit.ts  supabase-server.ts  supabase.ts  validations.ts
scripts/: generate-docs.ts
types/: database.ts  index.ts
(+33 files in other folders)
