[package]
name = "mkt4u-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana SDK
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# HTTP and async
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Crypto
bs58 = "0.5"
sha2 = "0.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "blockchain-service"
path = "src/main.rs"

[lib]
name = "mkt4u_blockchain"
path = "src/lib.rs"
